Environmental Model/jitfailure-dolfin_expression_3fa635c66722b083da6c61aa50051709/error.log
/tmp/tmpcw17rxci/dolfin_expression_3fa635c66722b083da6c61aa50051709.cpp: In member function ‘virtual void dolfin::dolfin_expression_3fa635c66722b083da6c61aa50051709::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpcw17rxci/dolfin_expression_3fa635c66722b083da6c61aa50051709.cpp:61:31: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = 1-x[0]**2+0.23*x[1]**3;
                               ^
/tmp/tmpcw17rxci/dolfin_expression_3fa635c66722b083da6c61aa50051709.cpp:61:44: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = 1-x[0]**2+0.23*x[1]**3;
                                            ^
